--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Hero Section -->
             <section id="home" class="hero">
                 <div class="container">
-                   <img src="img/ronskie.jpg" alt="Profile Picture" class="profile-pic" />
+                   <img src="ronskie.jpg" alt="Profile Picture" class="profile-pic" />
                     <h1>Ron Jeremie Dionglay</h1>
                     <div class="code-block">
                         <span class="keyword">public class</span> <span class="type">Developer</span> {<br />
